# chatmail-control

./: .env.example  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
migrations/: 0001_init.sql
scripts/: install.sh  update.sh
src/: audit.rs  auth.rs  bans.rs  chatmail.rs  config.rs  db.rs  error.rs  health.rs  invites.rs  logs.rs  main.rs  postfix.rs  request_id.rs  services.rs  settings.rs  shell.rs  users.rs
src/routes/: api.rs  auth.rs  bans.rs  dashboard.rs  health.rs  invites.rs  logs.rs  mod.rs  services.rs  settings.rs  users.rs
static/: admin-app.js  app.css
systemd/: chatmail-control.service
templates/: admin_app.html  bans.html  base.html  dashboard.html  health.html  invites.html  login.html  logs.html  services.html  settings.html  users.html
templates/partials/: flash.html  nav.html
